--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "playwright_playground",
+  "name": "playwright-mcp-demo",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
