--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # Dependencies
 node_modules/
 package-lock.json
-yarn.lock
 
 # Logs
 logs
@@ -9,7 +8,6 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Optional npm cache directory
 .npm
@@ -30,32 +28,13 @@ lerna-debug.log*
 
 # Coverage directory
 coverage/
-*.lcov
 
 # IDE directories
 .idea/
 .vscode/
 
-# Operating System files
+# Operating System
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
-
-# Playwright specific
 test-results/
 playwright-report/
-playwright/.cache/
-
-# Build outputs
-dist/
-build/
-out/
-
-# Temporary files
-*.tmp
-*.temp
-*~
